# idi-corporate-structure

./: .gitignore  .pre-commit-config.yaml  README.md  compose.override.yml  compose.yml  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
data/: unique-ciks.txt
dockerfiles/: Dockerfile.orchestrator
pulumi/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py
pulumi/infra/: __init__.py  config.py  ecr.py  ecs.py  iam.py  logs.py  networking.py  scheduling.py  secrets.py
scripts/: curate_submissions.py  curate_submissions_by_accession.py  get-10k-form-URLs.py  get-10k-form-directories.py  get-10k-form-exhibit21.py  get-10k-form-summaries.py  print-trees.py  regenerate_sec_codes.py  search-by-cik.py  select_ground_truth.py  verify_output.py
src/idi_corporate_structure/: __init__.py  api.py  extractor.py  failures.py  normalization.py  orchestrator.py  pipeline.py  types.py
src/idi_corporate_structure/common/: api.py  failures.py  logs.py  storage.py
src/idi_corporate_structure/processor/: extractor.py  failures.py  orchestrator.py  pipeline.py  types.py
src/idi_corporate_structure/processor/prompts/: __init__.py  gpt_extractor_system.txt
src/idi_corporate_structure/prompts/: gpt_extractor_system.txt
studies/: 2025-06-30-lei-cik-match-classifier.py  2025-07-02-lei-cik-match-classifier-2.ipynb  2025-08-07-cik-lei-match-form13F.ipynb  2025-08-11-lseg-cik-lei-match.ipynb  2025-09-19-analyze-sec-subsidiaries.ipynb
subsidiaries-from-sec/: local.py  test_local.py
subsidiaries-from-sec/fetch/: dispatcher.py  worker.py
tests/: __init__.py  conftest.py
tests/common/: test_api.py  test_failures.py  test_storage.py
tests/processor/: __init__.py  test_extractor.py  test_failures.py  test_html_text.py  test_normalization.py  test_pipeline.py  test_types.py
tests/processor/fixtures/: jnj_ex21_subsidiaries.htm
