
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idi_corporate_structure"]

[project]
name = "idi-corporate-structure"
version = "0.1.1a1"
description = "Retrieves subsidiary information from the SEC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.70",
    "pandas>=3.0.2",
    "pdfplumber>=0.11",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
    "s3fs>=2026.3.0",
    "smart-open>=7.5.1",
    "tqdm>=4.67.3",
    "urllib3>=2.6.3",
    "watchtower>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "pip-audit>=2.10.0",
]

[dependency-groups]
pulumi = [
    "pulumi>=3.220.0",
    "pulumi-aws>=7.19.0",
    "pyyaml>=6.0",
    "pip>=24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
  # by default, ruff enables all F and a subset of E rules
  # for a description of rulesets and examples, see:
  # https://docs.astral.sh/ruff/rules/
  "ANN",    # flake8-annotations - type annotations, some ignored
  "B",      # bugbear - identifies likely bugs
  "C4",     # flake8-comprehensions - identifies redundant calls in comprehensions
  "D",      # pydocstyle - requires docstrings on all public modules/functions/classes
  "I",      # isort
  "N801",   # pep8-naming - enforce ClassNamesStyle
  "N804",   # pep8-naming - first arg of classmethod should be cls
  "N805",   # pep8-naming - first arg of method should be self
  "PD",     # pandas-vet
  "PLR2004",# Pylint no magic values!
  "PTH",    # prefer pathlib over os.path as seems to be the consensus
  "Q",      # flake8-quotes - double quotes preferred (like black)
  "S",      # flake8-bandit - security checks
  "UP",     # pyupgrade - requires preferred syntax in newer python versions
  "YTT",    # flake8-2020 - corrects code that doesn't anticipate 2 digit python minor version
]

ignore = [
  "D415",   # allow first line of doctstrings to end without punctuation
  "ANN002", # missing type on *args
  "ANN003", # missing type on **kwargs
  "ANN101", # annotating self is non-standard and not required
  "B905",   # won't work on python <3.10
  "S101",   # allow assertions
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
  "ANN001", # missing type annotation for function arguments
  "ANN201", # missing return type annotation for public functions
  "ANN202", # missing return type annotation for private functions
  "ANN204", # missing return type annotation for special methods (e.g. __enter__, __exit__)
  "D102",   # missing docstring in public method
  "PLR2004",# magic values in test assertions are expected
]

[tool.ruff.lint.pydocstyle]
convention = "google"
